[package]
name = "safe_pod"
version = "0.0.1"
edition = "2021"
authors = ["Michelle Granat"]
description = "A library for serializing and deserializing structs to and from byte arrays written in safe rust"
readme = "README.md"
repository = "https://github.com/MichelleGranat/safe_pod"
license = "AGPL-3.0"
license-file = "LICENSE"
keywords = ["pod", "binary", "serialization", "deserialization", "data"]

[workspace]
members = ["safe_pod_derive"]

[lib]
doctest = false

[dependencies]
safe_pod_derive = {path = "./safe_pod_derive", version = "0.0.1"}